# search-rs

./: .gitignore  Cargo.toml
frontend/: Cargo.toml
frontend/src/: main.rs  service.rs
src/: corpus.rs  document.rs  ideas.txt  lexer.rs  main.rs  params.rs  stemmer.rs
