[package]
name = "search-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
docx-rs = "0.4.8"
poppler-rs = "0.23.0"
rust-stemmers = "1.2.0"
serde = "1.0.197"
serde_json = "1.0.114"
whatlang = { version = "0.16.4", features = ["serde"] }
