[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
leptos = { version = "0.6.6", features = ["csr"] }
serde = "1.0.197"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
thaw = { version = "0.2.2", features = ["csr"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = "0.3.68"
